[package]
name = "xkcd-search"
version = "0.1.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/Trivernis/xkcd-search-rs"
description = "Search for xkcd comics and retrieve metadata"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.3", features = ["json", "serde_json"]}
scraper = "0.12.0"
thiserror = "1.0.24"
lazy_static = "1.4.0"
serde = {version = "1.0.125", features = ["serde_derive"]}
trigram = "0.4.4"

[dev-dependencies]
tokio = {version = "1.5.0", features = ["macros", "rt-multi-thread"]}